# ai-news-aggregator

./: .dockerignore  main.py  pyproject.toml  render.yaml
app/: config.py  daily_runner.py  runner.py
app/agent/: curator_agent.py  digest_agent.py  email_agent.py
app/database/: __init__.py  connection.py  create_tables.py  models.py  repository.py
app/profiles/: user_profile.py
app/scrapers/: anthropic.py  openai.py  youtube.py
app/services/: config.py  email.py  process_anthropic.py  process_curator.py  process_digest.py  process_email.py  process_youtube.py  runner.py  youtube.py
docker/: example.env
scripts/: clear_db.py
